--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1><img src="img/logo.png"></h1>
             <nav>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -42,7 +42,7 @@
                     <li class="itens">Localização</li>
                     <li class="itens">Profissionais Qualificados</li>
                 </ul>
-            </div>
+            </div>home
             <div id="div2-footer">
                 <img src="img/beneficios.jpg" alt="Minha Figura" class="imagembeneficios">
             </div>
