Removendo palavra home

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li class="itens">Localização</li>
                     <li class="itens">Profissionais Qualificados</li>
                 </ul>
-            </div>home
+            </div>
             <div id="div2-footer">
                 <img src="img/beneficios.jpg" alt="Minha Figura" class="imagembeneficios">
             </div>
