Adicionando novas paginas

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Barbearia Miziara</title>
+    <link rel="stylesheet" href="css/style-home.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <main>
         <img id="barbearia" src="img/banner.jpg" alt="Minha Figura">
         <div class="principal">
-            <h2 class="centralizado" style="color: black;">Sobre a Barbearia Miziara</h2>
+            <h2 class="centralizado" style="color: black">Sobre a Barbearia Miziara</h2>
             <p>Localizada no coração da cidade a <strong>Barbearia Miziara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Barbearia Miziara já é destaque na cidade e conquista novos clientes a cada dia.</p>
             <p id="missao" style=" font-size: 20px"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de
                         vida aos clientes "</strong>.</em></p>
@@ -48,6 +48,11 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <img src="img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Miziara - 2019</p>
+    </footer>
 </body>
 
 </html>
