--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,8 @@
     <title>Produtos - Barbearia Miziara</title>
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/produtos.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contato.css">
 </head>
 
 <body>
@@ -50,6 +51,11 @@
 
         </ul>
     </main>
+
+    <footer>
+        <img src="img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Miziara - 2019</p>
+    </footer>
 </body>
 
 </html>
