Alterando página Home

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Barbearia Miziara</title>
-    <link rel="stylesheet" href="css/style-home.css">
+
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,37 +23,54 @@
             </nav>
         </div>
     </header>
-    <main>
-        <img id="barbearia" src="img/banner.jpg" alt="Minha Figura">
-        <div class="principal">
-            <h2 class="centralizado" style="color: black">Sobre a Barbearia Miziara</h2>
-            <p>Localizada no coração da cidade a <strong>Barbearia Miziara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Barbearia Miziara já é destaque na cidade e conquista novos clientes a cada dia.</p>
-            <p id="missao" style=" font-size: 20px"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de
-                        vida aos clientes "</strong>.</em></p>
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
 
-        <div class="beneficios">
-            <div id="div1-footer">
-                <ul id="text-footer">
-                    <li>
-                        <h3 class="centralizado" style="color: white; size: 30px; padding: 10px;">Benefícios</h3>
-                    </li>
-                    <li class="itens">Atendimento aos clientes</li>
-                    <li class="itens">Espaço diferenciado</li>
-                    <li class="itens">Localização</li>
-                    <li class="itens">Profissionais Qualificados</li>
-                </ul>
+    <img class="banner" src="img/banner.jpg">
+    <main>
+        <section class="principal">
+            <h2 class="titulo-principal">Sobre a Barbearia Miziara</h2>
+
+            <img class="utensilios" src="img/utensilios.jpg" alt="Utensilios de um barbeiro.">
+            <p>Localizada no coração da cidade a <strong>Barbearia Miziara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Barbearia Miziara já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            <p id=" missao " style=" font-size: 20px "><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes "</strong>.</em></p>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        </section>
+
+        <section class="mapa">
+            <h3 class="titulo-principal">Nosso estabelecimento</h3>
+            <p>
+                Nosso estabelecimentoestá localizado no coração da cidade</p>
+            <div class="mapa-conteudo">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.8905729565076!2d-48.238645585210016!3d-18.936237113064696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a44ff70f5c6655%3A0xaba6917af6c566f9!2sR.%20Carvalho%20de%20Mendon%C3%A7a%2C%201578%20-%20Pampulha%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1590540387512!5m2!1spt-BR!2sbr"
+                    width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
-            <div id="div2-footer">
-                <img src="img/beneficios.jpg" alt="Minha Figura" class="imagembeneficios">
+
+        </section>
+
+
+        <section class="beneficios">
+            <h3 class="titulo-principal"> Beneficios</h3>
+
+            <div class="conteudo-beneficios">
+                <ul class="lista-beneficios">
+                    <li class="itens ">Atendimento aos clientes </li>
+                    <li class="itens ">Espaço diferenciado</li>
+                    <li class="itens ">Localização</li>
+                    <li class="itens ">Profissionais Qualificados</li>
+                    <li class="itens ">Pontualidade</li>
+                    <li class="itens ">Limpeza</li>
+                </ul><img src="img/beneficios.jpg " class="imagem-beneficios">
             </div>
-        </div>
+
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+
     </main>
 
     <footer>
-        <img src="img/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Miziara - 2019</p>
+        <img src="img/logo-branco.png ">
+        <p class="copyright ">&copy; Copyright Barbearia Miziara - 2020</p>
     </footer>
 </body>
 
