--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset=" UTF-8 ">
+    <title>Barbearia Miziara</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contato.css">
 </head>
 
 <body>
@@ -71,34 +71,35 @@
         </label>
             <input type="submit" value="Enviar formulário" id="radio-email" class="enviar">
 
-        </form>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Dia</th>
-                    <th>Horário</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Segunda</td>
-                    <td>8h ~ 20h</td>
-                </tr>
-                <tr>
-                    <td>Quarta</td>
-                    <td>8h ~ 20h</td>
-                </tr>
-                <tr>
-                    <td>Sexta</td>
-                    <td>8h ~ 20h</td>
-                </tr>
-            </tbody>
-        </table>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
     </main>
     <footer>
         <img src="img/logo-branco.png" alt="Logo da Barbearia Miziara">
-        <p class="copyright">&copy; Copyright Barbearia Miziara - 2019</p>
+        <p class="copyright">&copy; Copyright Barbearia Miziara - 2020</p>
     </footer>
 </body>
 
