--- a/produtos.html
+++ b/produtos.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Produtos - Barbearia Miziara</title>
+    <title>Barbearia Miziara</title>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contato.css">
 </head>
 
 <body>
@@ -54,7 +53,7 @@
 
     <footer>
         <img src="img/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Miziara - 2019</p>
+        <p class="copyright">&copy; Copyright Barbearia Miziara - 2020</p>
     </footer>
 </body>
 
