--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset=" UTF-8 ">
+    <meta name="viewport" content="width=device-width">
     <title>Barbearia Miziara</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
