--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Barbearia Miziara</title>
 
     <link rel="stylesheet" href="css/reset.css">
@@ -13,7 +14,9 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="img/logo.png"></h1>
+            <h1>
+                <img src="img/logo.png"></h1>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -48,7 +51,7 @@
 
 
         <section class="beneficios">
-            <h3 class="titulo-principal"> Beneficios</h3>
+            <h3 class="titulo-principal"> Benefícios</h3>
 
             <div class="conteudo-beneficios">
                 <ul class="lista-beneficios">
@@ -62,7 +65,7 @@
             </div>
 
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
