Melhorando Responsividade das paginas

--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <header>
         <div class="caixa ">
             <h1>
-                <img src="img/logo.png " alt="Logo da Barbearia Miziara"></h1>
+                <img src="img/logo1.png " alt="Logo da Barbearia Miziara"></h1>
 
             <nav>
                 <ul>
@@ -85,22 +85,22 @@
                 <tbody>
                     <tr>
                         <td>Segunda</td>
-                        <td>8h ~ 20h</td>
+                        <td>8h - 20h</td>
                     </tr>
                     <tr>
                         <td>Quarta</td>
-                        <td>8h ~ 20h</td>
+                        <td>8h - 20h</td>
                     </tr>
                     <tr>
                         <td>Sexta</td>
-                        <td>8h ~ 20h</td>
+                        <td>8h - 20h</td>
                     </tr>
                 </tbody>
             </table>
         </form>
     </main>
     <footer>
-        <img src="img/logo-branco.png" alt="Logo da Barbearia Miziara">
+        <img src="img/logo1.png" alt="Logo da Barbearia Miziara">
         <p class="copyright">&copy; Copyright Barbearia Miziara - 2020</p>
     </footer>
 </body>
