--- a/produtos.html
+++ b/produtos.html
@@ -15,7 +15,7 @@
     <header>
         <div class="caixa">
             <h1>
-                <img src="img/logo.png"></h1>
+                <img src="img/logo1.png"></h1>
 
             <nav>
                 <ul>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <img src="img/logo-branco.png">
+        <img src="img/logo1.png">
         <p class="copyright">&copy; Copyright Barbearia Miziara - 2020</p>
     </footer>
 </body>
